--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,8 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"/>
+        android:layout_alignParentStart="true"
+        />
 
     <Button
         android:layout_width="match_parent"
@@ -51,7 +52,29 @@
         android:scaleType="fitXY"
         android:text="@string/createAccountString"
         android:id="@+id/createAccountButton"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/loginButton"
-        android:layout_alignParentLeft="true" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/LoginText"
+        android:text="@string/loginString"
+        android:textSize="50dp"
+        android:background="@android:color/transparent"
+
+
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:src="@drawable/login_elephant"
+        android:layout_below="@+id/LoginText"
+        android:layout_centerHorizontal="true"
+        android:layout_above="@+id/emailEditText"
+        android:paddingTop="@dimen/activity_vertical_margin"/>
 </RelativeLayout>
