--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -43,7 +43,6 @@
         android:layout_height="wrap_content"
         android:inputType="text"
         android:ems="10"
-        android:password="true"
         android:hint="@string/usernameString"
         android:id="@+id/usernameEditText"
         android:layout_alignParentRight="true"
@@ -76,15 +75,19 @@
         android:layout_alignLeft="@+id/confirmPasswordEditText"
         android:layout_alignStart="@+id/confirmPasswordEditText" />
 
-    <EditText
-        android:layout_width="wrap_content"
+    <TextView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/editText3"
         android:text="@string/createAnAccountString"
-        android:textSize="40sp"
+        android:textSize="35sp"
         android:background="@android:color/transparent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
+        android:gravity="center"/>
 
     <ImageView
         android:layout_width="wrap_content"
