Begun work on FeedActivity; created TrumpetFragment, which controls a bar at the bottom of the FeedActivity allowing the user to travel to the SubmitTrumpetActivity, as well as submit images (TODO). Begun developing a semblance of color theme in colors.xml (varying shades of gray with white text).

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,8 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="colorBackground">#303030</color>
+    <color name="colorSeparationLine">#616161</color>
+    <color name="colorText">#FFFFFF</color>
+    <color name="colorSubmitTrumpet">#909090</color>
 </resources>
