--- a/app/src/main/res/drawable/separation_lines.xml
+++ b/app/src/main/res/drawable/separation_lines.xml
@@ -8,7 +8,7 @@
         <shape android:shape="rectangle" >
             <stroke
                 android:width="1dp"
-                android:color="@color/colorSeparationLine" />
+                android:color="@color/colorPrimaryGray" />
 
             <solid android:color="@color/colorBackground" />
 
