Created SubmitFragmentActivity, which allows users to submit Trumpets (create Trumpet ParseObjects connected to their user). SubmitBarFragment in FeedActivity provides a button that links to this activity. Added an ActionBar to FeedActivity for profile, settings, etc. Will use a similar ActionBar for many other Activities.

--- a/app/src/main/res/layout/fragment_submit_bar.xml
+++ b/app/src/main/res/layout/fragment_submit_bar.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="jthd.trumpeter.TrumpetFragment"
+             tools:context="jthd.trumpeter.SubmitBarFragment"
                 android:id="@+id/TrumpetLayout">
 
     <!-- TODO: Update blank fragment layout -->
