--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorBackground">#303030</color>
-    <color name="colorSeparationLine">#616161</color>
+    <color name="colorPrimaryGray">#5A595B</color>
     <color name="colorText">#FFFFFF</color>
     <color name="colorSubmitTrumpet">#909090</color>
 </resources>
