--- a/app/src/main/res/layout/fragment_submit_bar.xml
+++ b/app/src/main/res/layout/fragment_submit_bar.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="jthd.trumpeter.SubmitBarFragment"
+             tools:context="jthd.trumpeter.SubmitBarFragmentTemp"
                 android:id="@+id/TrumpetLayout">
 
     <!-- TODO: Update blank fragment layout -->
