Begun implementing ListView in FeedActivity by introducing FeedAdapter, a custom Adapter class that manages the ListView, and TrumpetView, a custom View that manages the views in each "Trumpet". Created acceptable layout for each Feed item under feed_item.xml.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorPrimaryGray">#5A595B</color>
     <color name="colorText">#FFFFFF</color>
     <color name="colorSubmitTrumpet">#909090</color>
+    <color name="colorTrumpetText">#C1C1C1</color>
 </resources>
