completed TrumpetView and FeedAdapter, begun design of static class SubmitManager for submitting new Trumpets and Retrumpets. May create similar LoginManager class.

--- a/app/src/main/res/layout/activity_submit_trumpet.xml
+++ b/app/src/main/res/layout/activity_submit_trumpet.xml
@@ -40,7 +40,7 @@
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/trumpetText"
+        android:id="@+id/trumpetEditText"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_above="@+id/submitTrumpetButton"
@@ -51,14 +51,14 @@
         android:background="#00FFFFFF"
         android:textColor="@color/colorText"
         android:paddingTop="15dp"
-        android:layout_below="@+id/profilePictureView"/>
+        android:layout_below="@+id/profilePictureImageView"/>
 
     <ImageView
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:scaleType="centerInside"
         android:adjustViewBounds="true"
-        android:id="@+id/profilePictureView"
+        android:id="@+id/profilePictureImageView"
         android:layout_alignTop="@+id/backButton"
         android:layout_toRightOf="@+id/backButton"
         android:layout_toEndOf="@+id/backButton"
@@ -69,9 +69,9 @@
         android:layout_height="25dp"
         android:id="@+id/usernameTextView"
         android:gravity="center|left"
-        android:layout_toRightOf="@+id/profilePictureView"
-        android:layout_alignTop="@+id/profilePictureView"
-        android:layout_above="@+id/trumpetText"
+        android:layout_toRightOf="@+id/profilePictureImageView"
+        android:layout_alignTop="@+id/profilePictureImageView"
+        android:layout_above="@+id/trumpetEditText"
         android:text="\@jessethd"
         android:paddingLeft="10dp"
         android:textSize="20sp"
@@ -82,11 +82,11 @@
         android:layout_height="wrap_content"
         android:text="160"
         android:id="@+id/charCountTextView"
-        android:layout_above="@+id/trumpetText"
-        android:layout_alignRight="@+id/trumpetText"
-        android:layout_alignEnd="@+id/trumpetText"
+        android:layout_above="@+id/trumpetEditText"
+        android:layout_alignRight="@+id/trumpetEditText"
+        android:layout_alignEnd="@+id/trumpetEditText"
         android:gravity="center"
-        android:layout_alignTop="@+id/profilePictureView"
+        android:layout_alignTop="@+id/profilePictureImageView"
         android:layout_toEndOf="@+id/usernameTextView"
         android:textColor="@color/colorSubmitTrumpet"
         android:textSize="16sp"/>
