--- a/app/src/main/res/layout/trumpetView_layout.xml
+++ b/app/src/main/res/layout/trumpetView_layout.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<jthd.trumpeter.TrumpetView
+                xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent">
+                android:layout_height="fill_parent"
+                android:id="@+id/feedItemLayout">
 
     <ImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:scaleType="centerInside"
         android:adjustViewBounds="true"
-        android:id="@+id/profilePictureView"
+        android:id="@+id/profilePictureImageView"
         android:src="@drawable/default_profile_picture"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/retrumpetTextView"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
@@ -23,11 +25,11 @@
         android:paddingLeft="8dp"
         android:textSize="16sp"
         android:textColor="@color/colorText"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/profilePictureView"
         android:textStyle="bold"
 
-        />
+        android:layout_below="@+id/retrumpetTextView"
+        android:layout_toRightOf="@+id/profilePictureImageView"
+        android:layout_toEndOf="@+id/profilePictureImageView"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -37,8 +39,8 @@
         android:layout_below="@+id/usernameTextView"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_toRightOf="@+id/profilePictureView"
-        android:layout_toEndOf="@+id/profilePictureView"
+        android:layout_toRightOf="@+id/profilePictureImageView"
+        android:layout_toEndOf="@+id/profilePictureImageView"
         android:paddingLeft="8dp"
         android:textColor="@color/colorTrumpetText"/>
 
@@ -107,4 +109,17 @@
         android:layout_toEndOf="@+id/likeButton"
         android:layout_below="@+id/trumpetTextView"/>
 
-</RelativeLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Retrumpeted by @jessethd"
+        android:id="@+id/retrumpetTextView"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/trumpetTextView"
+        android:layout_alignEnd="@+id/trumpetTextView"
+        android:layout_toRightOf="@+id/profilePictureImageView"
+        android:layout_toEndOf="@+id/profilePictureImageView"
+        android:paddingLeft="8dp"
+        android:paddingTop="2dp"/>
+
+</jthd.trumpeter.TrumpetView>
