Fixed a variety of bugs. Removed FeedManager class and moved logic and querying to FeedActivity loadListViewData() function. Now loading FeedAdapter with List<ParseObject> of Trumpet objects directly, rather than providing it with a FeedManager.

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,5 +77,6 @@
         android:layout_below="@+id/LoginText"
         android:layout_centerHorizontal="true"
         android:layout_above="@+id/emailEditText"
-        android:paddingTop="@dimen/activity_vertical_margin"/>
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="8dp"/>
 </RelativeLayout>
