--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="fill_parent"
                 xmlns:app="http://schemas.android.com/apk/res-auto"
                 tools:context="jthd.trumpeter.FeedActivity"
                 android:id="@+id/feedLayout">
@@ -20,7 +20,7 @@
 
     <ListView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:id="@+id/feedListView"
         android:layout_below="@+id/titleBar"
         android:layout_alignParentLeft="true"
