--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -1,4 +1,5 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.SwipeRefreshLayout
+                xmlns:android="http://schemas.android.com/apk/res/android"
                 xmlns:tools="http://schemas.android.com/tools"
                 android:layout_width="match_parent"
                 android:layout_height="fill_parent"
@@ -26,4 +27,4 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"/>
 
-</RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
