--- a/app/src/main/res/menu/menu_view_trumpet.xml
+++ b/app/src/main/res/menu/menu_view_trumpet.xml
@@ -2,8 +2,12 @@
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
       tools:context="jthd.trumpeter.ViewTrumpetActivity">
-    <item android:id="@+id/action_settings"
+    <item android:id="@+id/settingsAction"
           android:title="@string/action_settings"
           android:orderInCategory="100"
           app:showAsAction="never"/>
+      <item android:id="@+id/refreshAction"
+            app:showAsAction="ifRoom"
+            android:title="Refresh"
+            android:icon="@drawable/refresh_actionbar_button"/>
 </menu>
