--- a/app/src/main/res/layout/activity_feed.xml
+++ b/app/src/main/res/layout/activity_feed.xml
@@ -49,4 +49,10 @@
 
 </android.support.v4.widget.SwipeRefreshLayout>
 
+    <TextView
+        android:id="@+id/emptyTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/emptyTextViewString" />
+
 </RelativeLayout>
