--- a/app/src/main/res/layout/activity_view_trumpet.xml
+++ b/app/src/main/res/layout/activity_view_trumpet.xml
@@ -30,13 +30,13 @@
 
 
         <TextView
-        tools:text="Retrumpeted by @jessethd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/retrumpetTextView"
-        android:paddingTop="6dp"
-        android:layout_alignTop="@+id/detailedItemLayout"
-        android:layout_above="@+id/profile"
+            tools:text="Retrumpeted by @jessethd"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/retrumpetTextView"
+            android:paddingTop="6dp"
+            android:layout_alignTop="@+id/detailedItemLayout"
+            android:layout_above="@+id/profile"
             android:layout_alignLeft="@+id/usernameTextView"/>
 
         <TextView
@@ -209,13 +209,31 @@
         android:id="@+id/replyFeedSwipeLayout"
         android:layout_below="@+id/detailedItemLayout">
 
-        <ListView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/replyFeedListView"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_below="@+id/detailedTrumpetSeparationLine"/>
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/emptyTextView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/emptyTextViewString"
+                android:visibility="gone"
+                android:gravity="center_horizontal"
+                android:padding="16dp"
+                android:fontFamily="sans-serif-light"
+                android:textSize="20sp"/>
+
+            <ListView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:id="@+id/replyFeedListView"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/detailedTrumpetSeparationLine"/>
+
+        </LinearLayout>
 
     </android.support.v4.widget.SwipeRefreshLayout>
 
