--- a/app/src/main/res/layout/activity_view_trumpet.xml
+++ b/app/src/main/res/layout/activity_view_trumpet.xml
@@ -40,7 +40,7 @@
             android:layout_alignLeft="@+id/usernameTextView"/>
 
         <TextView
-            tools:text="3 Replies"
+            tools:text="10 Replies"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/replyCountTextView"
@@ -134,6 +134,7 @@
             android:scaleType="centerInside"
             android:adjustViewBounds="true"
             android:paddingLeft="8dp"
+            android:paddingTop="8dp"
             android:id="@+id/profilePictureImageView"
             android:layout_below="@+id/retrumpetTextView"
             android:layout_alignParentLeft="true"
@@ -157,18 +158,18 @@
         <TextView
             tools:text="\@jessethd"
             android:layout_width="120dp"
-            android:layout_height="25dp"
+            android:layout_height="50dp"
+            android:paddingTop="25dp"
             android:id="@+id/usernameTextView"
             android:gravity="center|left"
             android:textSize="20sp"
             android:textColor="@color/colorText"
             android:textStyle="bold"
-            android:layout_marginTop="44dp"
-            android:layout_marginLeft="95dp"
-            android:layout_marginStart="95dp"
-            android:layout_below="@+id/actionBarSeparationLine"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_below="@+id/retrumpetTextView"
+            android:layout_toRightOf="@+id/profilePictureImageView"
+            android:layout_toEndOf="@+id/profilePictureImageView"
+            android:layout_marginLeft="12dp"
+            android:layout_marginStart="12dp"/>
 
         <TextView
             tools:text="Thu, Jan 02 2014 22:38:35"
@@ -177,14 +178,10 @@
             android:layout_height="wrap_content"
             android:id="@+id/dateTextView"
             android:textColor="#FFFFFF"
+            android:paddingTop="2dp"
             android:gravity="center|right"
-            android:paddingLeft="5dp"
-            android:layout_marginTop="72dp"
-            android:layout_marginLeft="90dp"
-            android:layout_marginStart="90dp"
-            android:layout_below="@+id/actionBarSeparationLine"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"/>
+            android:layout_below="@+id/usernameTextView"
+            android:layout_alignLeft="@+id/usernameTextView"/>
 
     </jthd.trumpeter.TrumpetView>
 
