--- a/app/src/main/res/layout/trumpet_view_layout.xml
+++ b/app/src/main/res/layout/trumpet_view_layout.xml
@@ -44,6 +44,7 @@
         android:layout_toRightOf="@+id/profilePictureImageView"
         android:layout_toEndOf="@+id/profilePictureImageView"
         android:paddingLeft="8dp"
+        android:paddingBottom="2dp"
         android:textColor="@color/colorTrumpetText"
         />
 
